[1.9] Locale update: es-ES
http://code.google.com/p/fbug/source/detail?r=12308

--- a/extension/locale/es-ES/firebug-tracing.properties
+++ b/extension/locale/es-ES/firebug-tracing.properties
@@ -43,29 +43,29 @@ tracing.option.A11Y_Description=Incidencias de accesibilidad
 tracing.option.ACTIVATION_Description=Activación de Firebug
 tracing.option.ACTIVITYOBSERVER_Description=Observador de actividad de Firebug
 tracing.option.ANNOTATIONS_Description=Anotación de sitio web de Firebug
-tracing.option.BP_Description=Puntos de ruptura
-tracing.option.CACHE_Description=Cache fuente
-tracing.option.COMMANDLINE_Description=Línea de comandos & Linea de comandos emergente
-tracing.option.COMPILATION_UNITS_Description=Unidades de compilacion de script
+tracing.option.BP_Description=Paradas
+tracing.option.CACHE_Description=Caché de fuente
+tracing.option.COMMANDLINE_Description=Línea de comandos y Linea de comandos emergente
+tracing.option.COMPILATION_UNITS_Description=Unidades de compilación de script
 tracing.option.CONSOLE_Description=Panel de consola
 tracing.option.CSS_Description=Procesado CSS
 tracing.option.DISPATCH_Description=Despachador de eventos
 tracing.option.DOM_Description=DOM
 tracing.option.DOMPLATE_Description=Creación domplate
 tracing.option.EDITOR_Description=Editor en linea & Autocompletador
-tracing.option.ERRORLOG_Description=Registro de errore de JS, CSS, XML, etc.
+tracing.option.ERRORLOG_Description=Registro de errores JS, CSS, XML, etc.
 tracing.option.ERRORS_Description=Errores internos de Firebug
 tracing.option.EVAL_Description=Evaluación de script
 tracing.option.FBS_BP_Description=Puntos de ruptura de servicios de Firebug
-tracing.option.FBS_CREATION_Description=Servicio de creación de script de Firebug
+tracing.option.FBS_CREATION_Description=Servicio de creación de scripts de Firebug
 tracing.option.FBS_ERRORS_Description=Errores de servicio de Firebug
 tracing.option.FBS_FINDDEBUGGER_Description=Servicio de Firebug buscar depurador
 tracing.option.FBS_FUNCTION_Description=Función de servicio de Firebug
-tracing.option.FBS_JSDCONTEXT_Description=Servicio de Firebug contexto de depurador JavaScript
-tracing.option.FBS_SRCUNITS_Description=Servicio de Firebug unidades fuente
-tracing.option.FBS_STEP_Description=Servicio de Firebug paso de depurador JavaScript
-tracing.option.FBS_TRACKFILES_Description=Servicio de Firebug archivos monitorizados
-tracing.option.FUNCTION_NAMES_Description=Nombre de función JavaScript
+tracing.option.FBS_JSDCONTEXT_Description=Servicio de Firebug de contexto de depurador JavaScript
+tracing.option.FBS_SRCUNITS_Description=Servicio de Firebug de unidades fuente
+tracing.option.FBS_STEP_Description=Servicio de Firebug de etapas de depurador JavaScript
+tracing.option.FBS_TRACKFILES_Description=Servicio de Firebug de archivos monitorizados
+tracing.option.FUNCTION_NAMES_Description=Nombres de función JavaScript
 tracing.option.HISTORY_Description=Historial de navegación de Firebug
 tracing.option.HTML_Description=HTML
 tracing.option.HTTPOBSERVER_Description=Observador de petición HTTP
@@ -75,7 +75,7 @@ tracing.option.INSPECT_Description=Inspector
 tracing.option.JSONVIEWER_Description=Visor JSON
 tracing.option.LINETABLE_Description=Script de línea de tabla
 tracing.option.LOCALE_Description=Localización
-tracing.option.LOCATIONS_Description=Localizaciones fuente
+tracing.option.LOCATIONS_Description=Ubicaciones de fuente
 tracing.option.NET_Description=Panel de red
 tracing.option.NET_EVENTS_Description=Eventos de red
 tracing.option.OPTIONS_Description=Preferencias de Firebug
@@ -84,10 +84,11 @@ tracing.option.SHORTCUTS_Description=Atajos de teclado
 tracing.option.SOURCEFILES_Description=Archivos fuente de JavaScript
 tracing.option.SPY_Description=Observador XMLHttpRequests
 tracing.option.STACK_Description=Pila de llamadas JavaScript
-tracing.option.STORAGE_Description=Preferencias de alcenamiento
+tracing.option.STORAGE_Description=Preferencias de almacenamiento
 tracing.option.SVGVIEWER_Description=Visor SVG
+tracing.option.FONTS_Description=Información y visor de fuentes
 tracing.option.TOOLTIP_Description=Consejo de botón inicio
 tracing.option.TOPLEVEL_Description=JavaScript de nivel alto
-tracing.option.UI_LOOP_Description=Interfaz de usuario de traza JavaScript
-tracing.option.WINDOWS_Description=Ventanas de Firebug & Tabulador observador
+tracing.option.UI_LOOP_Description=Interfaz de usuario de depuración JavaScript
+tracing.option.WINDOWS_Description=Ventanas de Firebug y Monitorizado de pestaña
 tracing.option.XMLVIEWER_Description=Visor XML
