[1.9] Locale update: ja-JP
http://code.google.com/p/fbug/source/detail?r=12317

--- a/extension/locale/ja-JP/firebug-tracing.properties
+++ b/extension/locale/ja-JP/firebug-tracing.properties
@@ -1,8 +1,8 @@
-#n
-#n
+#nn
+#nn
 Open_Firebug_Tracing=Firebug トレースを開く
 Always_Open_Firebug_Tracing=常に Firebug トレースを開く
-#n
+#nn
 title.Tracing=トレース
 tracing.Show_Scope_Variables=スコープ変数を表示
 tracing.Show_Time=時間を表示
@@ -48,7 +48,7 @@ tracing.option.CACHE_Description=ソースキャッシュ
 tracing.option.COMMANDLINE_Description=コマンドラインとコマンドラインポップアップ
 tracing.option.COMPILATION_UNITS_Description=スクリプトコンパイルユニット
 tracing.option.CONSOLE_Description=コンソールパネル
-tracing.option.CSS_Description=CSSパース
+tracing.option.CSS_Description=CSS パース
 tracing.option.DISPATCH_Description=イベントディスパッチ
 tracing.option.DOM_Description=DOM
 tracing.option.DOMPLATE_Description=Domplate 作成
@@ -86,6 +86,7 @@ tracing.option.SPY_Description=XMLHttpRequests オブザーバ
 tracing.option.STACK_Description=JavaScript コールスタック
 tracing.option.STORAGE_Description=設定ストレージ
 tracing.option.SVGVIEWER_Description=SVG ビューア
+tracing.option.FONTS_Description=フォント情報とフォントビュアー
 tracing.option.TOOLTIP_Description=スタートボタン ツールチップ
 tracing.option.TOPLEVEL_Description=トップレベル JavaScript
 tracing.option.UI_LOOP_Description=JavaScript デバッグユーザインターフェース
