[1.9] Locale update: zh-TW
http://code.google.com/p/fbug/source/detail?r=12359

--- a/extension/locale/zh-TW/firebug-tracing.properties
+++ b/extension/locale/zh-TW/firebug-tracing.properties
@@ -1,8 +1,8 @@
-# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
-# Firebug tracing console menu items (located in Firebug's menu).
+# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):nn
+# Firebug tracing console menu items (located in Firebug's menu).nn
 Open_Firebug_Tracing=開啟 Firebug 追溯 (Tracing)
 Always_Open_Firebug_Tracing=總是啟用 Firebug 追溯
-# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
+# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).nn
 title.Tracing=追溯
 tracing.Show_Scope_Variables=顯示作用範圍中的變數
 tracing.Show_Time=顯示時間
@@ -86,6 +86,7 @@ tracing.option.SPY_Description=XMLHttpRequests 觀察器
 tracing.option.STACK_Description=JavaScript 呼叫堆疊
 tracing.option.STORAGE_Description=設定儲存
 tracing.option.SVGVIEWER_Description=SVG 檢視器
+tracing.option.FONTS_Description=字型資訊與檢視器
 tracing.option.TOOLTIP_Description=開始按鈕工具提示
 tracing.option.TOPLEVEL_Description=Top level JavaScript
 tracing.option.UI_LOOP_Description=JavaScript 除錯使用者介面
