[1.9] Locale update: hu-HU
http://code.google.com/p/fbug/source/detail?r=12363

--- a/extension/locale/hu-HU/firebug-tracing.properties
+++ b/extension/locale/hu-HU/firebug-tracing.properties
@@ -86,6 +86,7 @@ tracing.option.SPY_Description=XMLHttpRequest figyelő
 tracing.option.STACK_Description=JavaScript hívási verem
 tracing.option.STORAGE_Description=Beállítások tárolója
 tracing.option.SVGVIEWER_Description=SVG megjelenítő
+tracing.option.FONTS_Description=Betűtípus információ és betűtípus nézegető
 tracing.option.TOOLTIP_Description=Start gomb gyorstipp
 tracing.option.TOPLEVEL_Description=Felsőszintű JavaScript
 tracing.option.UI_LOOP_Description=JavaScript hibakereső felhasználói felülete
