[1.9] Issue 5007: Headers from POST request body are not displayed anymore
http://code.google.com/p/fbug/source/detail?r=12370

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -417,11 +417,12 @@ jsonviewer.do_not_sort=Do not sort
 # example: Copy "person" as JSON
 net.jsonviewer.Copy_JSON=Copy "%S" as JSON
 
-# LOCALIZATION NOTE (RequestHeaders, ResponseHeaders, CachedResponseHeaders): Label (noun)
-# used in the Net panel (displayed inside the Headers tab of a request).
+# LOCALIZATION NOTE (RequestHeaders, ResponseHeaders, CachedResponseHeaders, PostRequestHeaders):
+# Label (noun) used in the Net panel (displayed inside the Headers tab of a request).
 RequestHeaders=Request Headers
 ResponseHeaders=Response Headers
 CachedResponseHeaders=Response Headers From Cache
+PostRequestHeaders=Request Headers From Upload Stream
 
 # LOCALIZATION NOTE (plural.Limit_Exceeded2): Semicolon list of plural forms.
 # A message displayed in the Net panel when some entries must be removed in the case the maximum number
