[1.9] Locale update: bg
http://code.google.com/p/fbug/source/detail?r=12468

--- a/extension/locale/bg/firebug-tracing.properties
+++ b/extension/locale/bg/firebug-tracing.properties
@@ -40,54 +40,55 @@ tracing.cmd.tip.Force_Garbage_Collector=Изчистване на паметта
 tracing.cmd.Open_Profile_Directory=Отваряне на папката на профила
 tracing.cmd.tip.Open_Profile_Directory=Отваряне на папката на профила
 tracing.option.A11Y_Description=Проблеми с достъпността
-tracing.option.ACTIVATION_Description=Активация на Firebug
-tracing.option.ACTIVITYOBSERVER_Description=Наблюдател на Firebug активността
-tracing.option.ANNOTATIONS_Description=Firebug сайт анотация.
-tracing.option.BP_Description=Почивни точки.
-tracing.option.CACHE_Description=Кеш на сорса.
-tracing.option.COMMANDLINE_Description=Команден център & изскачащ прозорец на командния център
-tracing.option.COMPILATION_UNITS_Description=Секция за компилация на скриптове.
-tracing.option.CONSOLE_Description=Конзолен панел
-tracing.option.CSS_Description=CSS разбор
-tracing.option.DISPATCH_Description=Известяване на събития
+tracing.option.ACTIVATION_Description=Включване на Firebug
+tracing.option.ACTIVITYOBSERVER_Description=Следене на работата на Firebug
+tracing.option.ANNOTATIONS_Description=Бележки за сайт
+tracing.option.BP_Description=Точки на прекъсване
+tracing.option.CACHE_Description=Кеш на кода
+tracing.option.COMMANDLINE_Description=Команден ред и прозорец
+tracing.option.COMPILATION_UNITS_Description=Части при компилиране на скриптове
+tracing.option.CONSOLE_Description=Панел на конзолата
+tracing.option.CSS_Description=Анализ на CSS
+tracing.option.DISPATCH_Description=Предаване на събития
 tracing.option.DOM_Description=DOM
-tracing.option.DOMPLATE_Description=Създаване на Domplate
-tracing.option.EDITOR_Description=Редови редактор & Autocompleter
-tracing.option.ERRORLOG_Description=Лог за грешки на JS, CSS, XML и др.
-tracing.option.ERRORS_Description=Вътрешни Firebug грешки
-tracing.option.EVAL_Description=Script оценка
-tracing.option.FBS_BP_Description=Почивни точки на Firebug услугата
-tracing.option.FBS_CREATION_Description=Firebug услуга за създаване на скриптове
-tracing.option.FBS_ERRORS_Description=Грешки на Firebug услугата
-tracing.option.FBS_FINDDEBUGGER_Description=Firebug услугата намира debbuger-и.
-tracing.option.FBS_FUNCTION_Description=Функцията на Firebug услугата.
-tracing.option.FBS_JSDCONTEXT_Description=JavaScript дебъгер на Firebug услугата.
-tracing.option.FBS_SRCUNITS_Description=Сорс единици на Firebug услугата
-tracing.option.FBS_STEP_Description=Firebug service JavaScript Debugger stepping
-tracing.option.FBS_TRACKFILES_Description=Проследени файлове на Firebug услугата
-tracing.option.FUNCTION_NAMES_Description=Имена на JavaScript функции
-tracing.option.HISTORY_Description=Firebug навигационна история
+tracing.option.DOMPLATE_Description=Създаване чрез шаблон (Domplate)
+tracing.option.EDITOR_Description=Вграден редактор и автоматично дописване
+tracing.option.ERRORLOG_Description=Журнал за грешки от JS, CSS, XML и др.
+tracing.option.ERRORS_Description=Вътрешни грешки на Firebug
+tracing.option.EVAL_Description=Изпълнение на скрипт
+tracing.option.FBS_BP_Description=Точки на прекъсване от Firebug
+tracing.option.FBS_CREATION_Description=Създаване на скриптове от Firebug
+tracing.option.FBS_ERRORS_Description=Грешки от Firebug
+tracing.option.FBS_FINDDEBUGGER_Description=Търсене на функционалност за изчистване на грешки от Firebug
+tracing.option.FBS_FUNCTION_Description=Функционалност от Firebug
+tracing.option.FBS_JSDCONTEXT_Description=Контекст при изчистване на грешки в JavaScript от Firebug
+tracing.option.FBS_SRCUNITS_Description=Изходен код от Firebug
+tracing.option.FBS_STEP_Description=Постъпково изпълнение при изчистване на грешки от Firebug
+tracing.option.FBS_TRACKFILES_Description=Следени файлове от Firebug
+tracing.option.FUNCTION_NAMES_Description=Имена на функции на JavaScript
+tracing.option.HISTORY_Description=История на навигацията във Firebug
 tracing.option.HTML_Description=HTML
-tracing.option.HTTPOBSERVER_Description=HTTP request наблюдател
-tracing.option.INFOTIP_Description=Инфо съвет
+tracing.option.HTTPOBSERVER_Description=Наблюдение на заявки по HTTP
+tracing.option.INFOTIP_Description=Съвет
 tracing.option.INITIALIZE_Description=Инициализация на Firebug
 tracing.option.INSPECT_Description=Инспектор
-tracing.option.JSONVIEWER_Description=JSON диаскоп
-tracing.option.LINETABLE_Description=Script line table
+tracing.option.JSONVIEWER_Description=Преглед на JSON
+tracing.option.LINETABLE_Description=Таблица с редовете на скриптовете
 tracing.option.LOCALE_Description=Локализация
-tracing.option.LOCATIONS_Description=Местоположения на сорс
-tracing.option.NET_Description=NET панел
+tracing.option.LOCATIONS_Description=Източник на код
+tracing.option.NET_Description=Мрежов панел
 tracing.option.NET_EVENTS_Description=Мрежови събития
-tracing.option.OPTIONS_Description=Firebug предпочитания
+tracing.option.OPTIONS_Description=Настройки на Firebug
 tracing.option.PANELS_Description=Панели
-tracing.option.SHORTCUTS_Description=Клавиатурни преки пътища
-tracing.option.SOURCEFILES_Description=JavaScript сорс файлове
-tracing.option.SPY_Description=XMLHttpRequests наблюдател
-tracing.option.STACK_Description=JavaScript call stack
-tracing.option.STORAGE_Description=Склад за настройки
-tracing.option.SVGVIEWER_Description=SVG диаскоп
-tracing.option.TOOLTIP_Description=Бутон за стартиране на ToolTip
-tracing.option.TOPLEVEL_Description=Най - високо ниво JavaScript
-tracing.option.UI_LOOP_Description=Юзер Интерфейс на JS дебъгването
-tracing.option.WINDOWS_Description=Firebug наблюдател на прозорци и табове
-tracing.option.XMLVIEWER_Description=XML диаскоп
+tracing.option.SHORTCUTS_Description=Клавишни комбинации
+tracing.option.SOURCEFILES_Description=Файлове с изходен код на JavaScript
+tracing.option.SPY_Description=Наблюдение на заявки по XMLHttpRequests
+tracing.option.STACK_Description=Стек на извикванията на JavaScript
+tracing.option.STORAGE_Description=Място на запазване на настройките
+tracing.option.SVGVIEWER_Description=Преглед на SVG
+tracing.option.FONTS_Description=Информация и преглед на шрифтове
+tracing.option.TOOLTIP_Description=Подсказка на бутона за стартиране
+tracing.option.TOPLEVEL_Description=JavaScript от най-горно ниво
+tracing.option.UI_LOOP_Description=Потребителски интерфейс за изчистване на грешки в JavaScript
+tracing.option.WINDOWS_Description=Наблюдение на прозорците и подпрозорците на Firebug
+tracing.option.XMLVIEWER_Description=Преглед на XML
