[1.9] Added second explanation to "no javascript" message (according to issue 2935)
http://code.google.com/p/fbug/source/detail?r=12537

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -978,7 +978,7 @@ script.suggestion.all_scripts_filtered=See the script filter setting in the pane
 # Message displayed in the Script panel, if the page doesn't include any JavaScript.
 # The suggestion message represents an advice how to solve the problem.
 script.warning.no_javascript=No Javascript on this page
-script.suggestion.no_javascript=If <script> tags have a "type" attribute, it should equal "text/javascript" or "application/javascript".
+script.suggestion.no_javascript=If <script> tags have a "type" attribute, it should equal "text/javascript" or "application/javascript". Also scripts must be parsable (syntactically correct).
 
 # LOCALIZATION NOTE (script.warning.no_javascript, script.suggestion.no_javascript):
 # Message displayed in the Script panel, if the page is opened in different tabs/windows and
