[1.10][&1.9] Issue 5000 (Add option to delete CSS rule) http://code.google.com/p/fbug/issues/detail?id=5000
http://code.google.com/p/fbug/source/detail?r=12638

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -201,6 +201,13 @@ css.EmptyElementCSS=This element has no style rules. You can <a>create a rule</a
 
 EditStyle=Edit Element Style...
 NewRule=New Rule...
+
+# LOCALIZATION NOTE (css.Delete_Rule): Menu item label used in the CSS panel context menu.
+# Allows to delete an existing CSS rule
+# %S = Selector of the clicked rule
+# examples: Delete "div > p"
+css.Delete_Rule=Delete "%S"
+
 NewProp=New Property...
 
 # LOCALIZATION NOTE (EditProp): Menu item label used in the CSS panel context menu.
