[1.10][&1.9] Locale update: he
http://code.google.com/p/fbug/source/detail?r=12652

--- a/extension/locale/he/firebug.properties
+++ b/extension/locale/he/firebug.properties
@@ -592,7 +592,7 @@ search.html.CSS_Selector=בורר CSS
 search.net.Headers=כותרות
 search.net.Parameters=פרמטרים
 search.net.Response_Bodies=גופי תשובה
-firebug.console.Persist=הישארות
+firebug.console.Persist=השארה
 firebug.console.Do_Not_Clear_On_Reload=לא לנקות עם רענון
 firebug.console.Show_All_Log_Entries=להציג את כל עיולי היומן
 firebug.console.Errors=שגיאות
@@ -903,7 +903,7 @@ firebug.RunUntil=ריצה לשורה הזאת
 # Firebug should start using \"Inspect Element with Firebug\" to distinguish itself.
 firebug.Inspect=לחקור
 firebug.InspectElement=לחקור מרכיב
-firebug.InspectElementWithFirebug=לחקור מרכיב באמצעות פייבאג
+firebug.InspectElementWithFirebug=לחקור מרכיב באמצעות פיירבאג
 firebug.BreakOnErrors=לבלום בשגיאות
 firebug.InspectTooltip=לחצו על מרכיב בדף כדי לחקור אותו
 firebug.EditHTMLTooltip=עריכת ה־HTML הזה
