[1.10][&1.9] Locale update: it
http://code.google.com/p/fbug/source/detail?r=12669

--- a/extension/locale/it/firebug-tracing.properties
+++ b/extension/locale/it/firebug-tracing.properties
@@ -1,11 +1,8 @@
-# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
-
-# Firebug tracing console menu items (located in Firebug's menu).
-
+# LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):\n
+# Firebug tracing console menu items (located in Firebug\'s menu).\n
 Open_Firebug_Tracing=Apri la console di Firebug
 Always_Open_Firebug_Tracing=Apri sempre la console di Firebug
-# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
-
+# LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).\n
 title.Tracing=Analisi di
 tracing.Show_Scope_Variables=Mostra variabili scope
 tracing.Show_Time=Mostra tempo
@@ -42,3 +39,56 @@ tracing.cmd.Force_Garbage_Collector=Forza Garbage collector
 tracing.cmd.tip.Force_Garbage_Collector=Forza Garbage collector
 tracing.cmd.Open_Profile_Directory=Apri la cartella del profilo
 tracing.cmd.tip.Open_Profile_Directory=Apre la cartella del profilo
+tracing.option.A11Y_Description=Problemi di accessibilità
+tracing.option.ACTIVATION_Description=Attivazione di Firebug
+tracing.option.ACTIVITYOBSERVER_Description=Controllo attività di Firebug
+tracing.option.ANNOTATIONS_Description=Annotazioni sito web di Firebug
+tracing.option.BP_Description=Punti di arresto
+tracing.option.CACHE_Description=Sorgente cache
+tracing.option.COMMANDLINE_Description=Riga di comando e pop-up
+tracing.option.COMPILATION_UNITS_Description=Unità compilazione script
+tracing.option.CONSOLE_Description=Pannello Console
+tracing.option.CSS_Description=Analisi CSS
+tracing.option.DISPATCH_Description=Invio evento
+tracing.option.DOM_Description=DOM
+tracing.option.DOMPLATE_Description=Eventi creazione UI di Firebug
+tracing.option.EDITOR_Description=Editor in linea e completamento automatico
+tracing.option.ERRORLOG_Description=Registro degli errori JS, CSS, XML, etc
+tracing.option.ERRORS_Description=Errori interni di Firebug
+tracing.option.EVAL_Description=Valutazione script
+tracing.option.FBS_BP_Description=Servizio punti di arresto di Firebug
+tracing.option.FBS_CREATION_Description=Servizio creazione script di Firebug
+tracing.option.FBS_ERRORS_Description=Servizio errori di Firebug
+tracing.option.FBS_FINDDEBUGGER_Description=Servizio debugger ricerca di Firebug
+tracing.option.FBS_FUNCTION_Description=Servizio funzione di Firebug
+tracing.option.FBS_JSDCONTEXT_Description=Servizio contesto debugger JavaScript di Firebug
+tracing.option.FBS_SRCUNITS_Description=Servizio unità sorgente di Firebug
+tracing.option.FBS_STEP_Description=Servizio debugger JavaScript incrementale di Firebug
+tracing.option.FBS_TRACKFILES_Description=Servizio file tracciati di Firebug
+tracing.option.FUNCTION_NAMES_Description=Nomi funzione JavaScript
+tracing.option.HISTORY_Description=Cronologia navigazione di Firebug
+tracing.option.HTML_Description=HTML
+tracing.option.HTTPOBSERVER_Description=Controllo richieste HTTP
+tracing.option.INFOTIP_Description=Tooltip
+tracing.option.INITIALIZE_Description=Inizializzazione di Firebug
+tracing.option.INSPECT_Description=Analisi
+tracing.option.JSONVIEWER_Description=Visualizzatore JSON
+tracing.option.LINETABLE_Description=Linea tabella dello script
+tracing.option.LOCALE_Description=Localizzazione
+tracing.option.LOCATIONS_Description=Percorso sorgente
+tracing.option.NET_Description=Pannello Net
+tracing.option.NET_EVENTS_Description=Eventi rete
+tracing.option.OPTIONS_Description=Opzioni di Firebug
+tracing.option.PANELS_Description=Pannelli
+tracing.option.SHORTCUTS_Description=Scorciatoie da tastiera
+tracing.option.SOURCEFILES_Description=File sorgente JavaScript
+tracing.option.SPY_Description=Controllo richieste XMLHttp
+tracing.option.STACK_Description=Stack chiamata JavaScript
+tracing.option.STORAGE_Description=Impostazioni memorizzazione
+tracing.option.SVGVIEWER_Description=Visualizzatore SVG
+tracing.option.FONTS_Description=Informazioni sui font e visualizzatore font
+tracing.option.TOOLTIP_Description=Tooltip pulsante avvio
+tracing.option.TOPLEVEL_Description=JavaScript di primo livello
+tracing.option.UI_LOOP_Description=Interfaccia utente debug JavaScript
+tracing.option.WINDOWS_Description=Controllo finestre/schede di Firebug
+tracing.option.XMLVIEWER_Description=Visualizzatore XML
