[1.10][&1.9] Issue 5110 (Remove "Show chrome sources") http://code.google.com/p/fbug/issues/detail?id=5110
http://code.google.com/p/fbug/source/detail?r=12671

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -232,7 +232,6 @@ DeleteProp=Delete "%S"
 BreakOnThisError=Break on This Error
 BreakOnAllErrors=Break on All Errors
 
-ShowAllSourceFiles=Show chrome sources
 TrackThrowCatch=Track Throw/Catch
 UseLastLineForEvalName=Use Last Source Line for eval() names
 UseMD5ForEvalName=Use MD5 for eval() names
@@ -979,7 +978,7 @@ script.button.enable_javascript=Enable JavaScript and Refresh
 # Message displayed in the Script panel, if no JavaScripts are available for the current page.
 # The suggestion message represents an advice how to solve the problem.
 script.warning.all_scripts_filtered=All scripts were filtered
-script.suggestion.all_scripts_filtered=See the script filter setting in the panel toolbar or the 'Show Chrome Sources' option
+script.suggestion.all_scripts_filtered=See the script filter setting in the panel toolbar
 
 # LOCALIZATION NOTE (script.warning.no_javascript, script.suggestion.no_javascript):
 # Message displayed in the Script panel, if the page doesn't include any JavaScript.
@@ -987,7 +986,13 @@ script.suggestion.all_scripts_filtered=See the script filter setting in the pane
 script.warning.no_javascript=No Javascript on this page
 script.suggestion.no_javascript2=If <script> tags have a "type" attribute, it should equal "text/javascript" or "application/javascript". Also scripts must be parsable (syntactically correct).
 
-# LOCALIZATION NOTE (script.warning.no_javascript, script.suggestion.no_javascript):
+# LOCALIZATION NOTE (script.warning.no_chrome_debugging, script.suggestion.no_chrome_debugging):
+# Message displayed in the Script panel, if the page opened is accessed via a chrome URL.
+# The suggestion message represents an advice how to solve the problem.
+script.warning.no_system_source_debugging=System sources can't be debugged
+script.suggestion.no_system_source_debugging=Firebug currently can't be used to debug system sources. See <a>issue 5110</a> for the reason.
+
+# LOCALIZATION NOTE (script.warning.debugger_active, script.suggestion.debugger_active):
 # Message displayed in the Script panel, if the page is opened in different tabs/windows and
 # the debugger is already halted at a breakpoint inside another tab/window.
 # The suggestion message represents an advice how to solve the problem.
