[1.10] Issue 3310 (Can't rebind shortcut to deactivate firebug) http://code.google.com/p/fbug/issues/detail?id=3310
http://code.google.com/p/fbug/source/detail?r=12715

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -872,6 +872,7 @@ firebug.shortcut.detachFirebug.label=Open Firebug in New Window
 firebug.shortcut.leftFirebugTab.label=Switch to left Firebug panel
 firebug.shortcut.rightFirebugTab.label=Switch to right Firebug panel
 firebug.shortcut.toggleFirebug.label=Open Firebug
+firebug.shortcut.closeFirebug.label=Deactivate Firebug
 firebug.shortcut.previousFirebugTab.label=Previous Firebug tab
 firebug.shortcut.clearConsole.label=Clear Console
 firebug.shortcut.openTraceConsole.label=Open Trace Console
