[1.10] Issue 5155 (Add descriptions to shortcuts) http://code.google.com/p/fbug/issues/detail?id=5155
http://code.google.com/p/fbug/source/detail?r=12717

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -856,31 +856,56 @@ firebug.menu.Enable_Accessibility_Enhancements=Enable Accessibility Enhancements
 firebug.menu.Activate_Same_Origin_URLs=Activate Same Origin URLs
 firebug.menu.Reset_All_Firebug_Options=Reset All Firebug Options
 firebug.menu.Firebug_Online=Firebug Online
-firebug.shortcut.reenterCommand.label=Reenter Command
-firebug.shortcut.toggleInspecting.label=Toggle Inspecting
-firebug.shortcut.toggleQuickInfoBox.label=Toggle Quick Info Box
-firebug.shortcut.toggleProfiling.label=Toggle Profiling
-firebug.shortcut.focusCommandLine.label=Focus Command Line
-firebug.shortcut.focusFirebugSearch.label=Focus Firebug Search
-firebug.shortcut.focusWatchEditor.label=Focus Watch Editor
-firebug.shortcut.focusLocation.label=Focus Location
-firebug.shortcut.focusFbMenu.label=Focus Firebug Menu
-firebug.shortcut.nextObject.label=Next Object
-firebug.shortcut.previousObject.label=Previous Object
-firebug.shortcut.customizeFBKeys.label=Customize Firebug Keys
-firebug.shortcut.detachFirebug.label=Open Firebug in New Window
-firebug.shortcut.leftFirebugTab.label=Switch to left Firebug panel
-firebug.shortcut.rightFirebugTab.label=Switch to right Firebug panel
-firebug.shortcut.toggleFirebug.label=Open Firebug
-firebug.shortcut.closeFirebug.label=Deactivate Firebug
-firebug.shortcut.previousFirebugTab.label=Previous Firebug tab
-firebug.shortcut.clearConsole.label=Clear Console
-firebug.shortcut.openTraceConsole.label=Open Trace Console
-firebug.shortcut.navBack.label=Go Back
-firebug.shortcut.navForward.label=Go Forward
-firebug.shortcut.increaseTextSize.label=Increase Text Size
-firebug.shortcut.decreaseTextSize.label=Decrease Text Size
-firebug.shortcut.normalTextSize.label=Normal Text Size
+
+# Firebug shortcuts
+firebug.shortcut.label.reenterCommand=Re-enter Command
+firebug.shortcut.tip.reenterCommand=Re-enter the last command into the Command Line
+firebug.shortcut.label.toggleInspecting=Toggle Inspecting
+firebug.shortcut.tip.toggleInspecting=Enable/disable the Inspector
+firebug.shortcut.label.toggleQuickInfoBox=Toggle Quick Info Box
+firebug.shortcut.tip.toggleQuickInfoBox=Enable/disable the display of a panel with information about the currently inspected element
+firebug.shortcut.label.toggleProfiling=Toggle Profiling
+firebug.shortcut.tip.toggleProfiling=Enable/disable the JavaScript Profiler
+firebug.shortcut.label.focusCommandLine=Focus Command Line
+firebug.shortcut.tip.focusCommandLine=Open Firebug and set the focus to the Command Line / toggle the Command Line Popup
+firebug.shortcut.label.focusFirebugSearch=Focus Firebug Search
+firebug.shortcut.tip.focusFirebugSearch=Set the focus to the search field
+firebug.shortcut.label.focusWatchEditor=Focus Watch Editor
+firebug.shortcut.tip.focusWatchEditor=Switch to the Script panel and set the focus to the field for entering a new watch expression
+firebug.shortcut.label.focusLocation=Focus Location
+firebug.shortcut.tip.focusLocation=Open the Location Menu
+firebug.shortcut.label.nextObject=Next Object
+firebug.shortcut.tip.nextObject=Select the next object in the element path of a panel
+firebug.shortcut.label.previousObject=Previous Object
+firebug.shortcut.tip.previousObject=Select the previous object in the element path of a panel
+firebug.shortcut.label.customizeFBKeys=Customize Firebug Keys
+firebug.shortcut.tip.customizeFBKeys=Open the Firebug Shortcut Bindings dialog
+firebug.shortcut.label.detachFirebug=Open Firebug in New Window
+firebug.shortcut.tip.detachFirebug=Detach Firebug into its own window
+firebug.shortcut.label.leftFirebugTab=Switch to left Firebug panel
+firebug.shortcut.tip.leftFirebugTab=Switch to the Firebug panel to the left
+firebug.shortcut.label.rightFirebugTab=Switch to right Firebug panel
+firebug.shortcut.tip.rightFirebugTab=Switch to the Firebug panel to the right
+firebug.shortcut.label.toggleFirebug=Toggle Firebug
+firebug.shortcut.tip.toggleFirebug=Open/Minimize Firebug UI
+firebug.shortcut.label.closeFirebug=Deactivate Firebug
+firebug.shortcut.tip.closeFirebug=Deactivate Firebug
+firebug.shortcut.label.previousFirebugTab=Previous Firebug panel
+firebug.shortcut.tip.previousFirebugTab=Switch to the previously selected Firebug panel
+firebug.shortcut.label.clearConsole=Clear Console
+firebug.shortcut.tip.clearConsole=Remove all logs from the console
+firebug.shortcut.label.openTraceConsole=Open Trace Console
+firebug.shortcut.tip.openTraceConsole=Open the FBTrace Console
+firebug.shortcut.label.navBack=Go Back
+firebug.shortcut.tip.navBack=Switch to the previous panel or location list item of the navigation history
+firebug.shortcut.label.navForward=Go Forward
+firebug.shortcut.tip.navForward=Switch to the next panel or location list item of the navigation history
+firebug.shortcut.label.increaseTextSize=Increase Text Size
+firebug.shortcut.tip.increaseTextSize=Increase the text sizes used in Firebug
+firebug.shortcut.label.decreaseTextSize=Decrease Text Size
+firebug.shortcut.tip.decreaseTextSize=Decrease the text sizes used in Firebug
+firebug.shortcut.label.normalTextSize=Normal Text Size
+firebug.shortcut.tip.normalTextSize=Resets the text sizes used in Firebug to the default
 
 firebug.panel_selector=Panel Selector
 
