[1.10][&1.9] Locale update: nl
http://code.google.com/p/fbug/source/detail?r=12760

--- a/extension/locale/nl/firebug-tracing.properties
+++ b/extension/locale/nl/firebug-tracing.properties
@@ -1,5 +1,5 @@
 # LOCALIZATION NOTE (Open_Firebug_Tracing, Always_Open_Firebug_Tracing):
-# Firebug tracing console menu items (located in Firebug's menu).
+# Firebug tracing console menu items (located in Firebug\'s menu).
 Open_Firebug_Tracing=Firebug Volgen openen
 Always_Open_Firebug_Tracing=Firebug Volgen altijd openen
 # LOCALIZATION NOTE (title.Tracing): Title for Firebug tracing console window (verb).
@@ -86,6 +86,7 @@ tracing.option.SPY_Description=XMLHttpRequests-observatie
 tracing.option.STACK_Description=JavaScript-aanroepstapel
 tracing.option.STORAGE_Description=Instellingen opslag
 tracing.option.SVGVIEWER_Description=SVG-weergave
+tracing.option.FONTS_Description=Lettertype-informatie en lettertypebeeld
 tracing.option.TOOLTIP_Description=Startknop-tooltip
 tracing.option.TOPLEVEL_Description=Topniveau-JavaScript
 tracing.option.UI_LOOP_Description=JavaScript-foutopsporingsgebruikersinterface
