[1.10][&1.9] Issue 5183: Workaround for Bug 712289
http://code.google.com/p/fbug/source/detail?r=12766

--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -774,6 +774,10 @@ moduleManager.title=%S Panel is disabled
 moduleManager.desc3=Use Firebug's status bar icon to enable/disable all panels at once. Use each panel's tab menu for individual control.
 moduleManager.Enable=Enable
 
+# LOCALIZATION NOTE (moduleManager.scriptPanelNotAvailable): A description used in the Script panel
+# this is for a bug that appeared in Firefox 9. Related to bug712289
+moduleManager.scriptPanelNotAvailable=The Script panel is disabled in Firefox 9 running on 32 bit Mac or Linux due to a bug in JSD.<br/><b>Please use Firefox 10+</b> (or different OS).<br/><br/>We are sorry for the inconvenience.
+
 Suspend_Firebug=Suspend Firebug
 Resume_Firebug=Resume Firebug
 Reset_Panels_To_Disabled=Reset Panels To Disabled
