--- a/extension/locale/en-US/firebug.properties
+++ b/extension/locale/en-US/firebug.properties
@@ -776,7 +776,7 @@ moduleManager.Enable=Enable
 
 # LOCALIZATION NOTE (moduleManager.scriptPanelNotAvailable): A description used in the Script panel
 # this is for a bug that appeared in Firefox 9. Related to bug712289
-moduleManager.scriptPanelNotAvailable=The Script panel is disabled in Firefox 9 running on 32 bit Mac or Linux due to a bug in JSD.<br/><b>Please use Firefox 10+</b> (you can also use Firefox prior 9 or different OS).<br/><br/>We are sorry for the inconvenience.
+moduleManager.scriptPanelNotAvailable=The Script panel is disabled in Firefox 9 running on 32 bit Mac or Linux due to a bug in JavaScript Debugger.<br/><b>Please use Firefox 10+</b> (recommended) or a version of Firefox prior 9 on this Operating System.<br/><br/>We are sorry for the inconvenience!
 
 Suspend_Firebug=Suspend Firebug
 Resume_Firebug=Resume Firebug
